--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -38,6 +38,14 @@ body{
     font-weight: bold;
     color: white;
     cursor: pointer;
+    transition: background-color 0.4s ease;
+    
+}
+
+.btn:hover{
+    background-color: orangered;
+    color: white;
+    transform: scale(1.05);
 }
 
 /* about section , what i do section */
