--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -576,6 +576,11 @@ nav .menu{
     /* vertical-align: middle; */
 
 }
+
+#banner .banner-content p{
+
+}
+
 #banner .banner-content h2{
     font-size: 45px;
     font-weight: 600;
@@ -622,6 +627,12 @@ nav .menu a{
     padding: 5px;
     color: white;
 
+}
+
+#banner .banner-content p{
+
+    font-size: 20px;
+    
 }
     
 }
