--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -636,3 +636,232 @@ nav .menu a{
 }
     
 }
+
+
+/* tablet */
+
+@media screen and (min-width:576px) and (max-width:992px){
+    
+      #about .about-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: bisque;
+    padding: 15px;
+    border: 1px solid orangered;
+    border-radius: 15px;
+    box-shadow: 2px 2px 2px orangered;
+
+
+   }
+   #about .about-container .about-info{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 30px;
+    padding-bottom: 10px;
+
+    }
+
+    #skills .skills-container{
+
+    width: 95%;
+    /* max-width: 1140px;
+    margin: 0 auto; */
+
+  }
+  .section-heading h2{
+    font-weight: bold;
+    font-size: 30px;
+    /* margin-bottom: 30px; */
+    background-color: rgb(202, 143, 122);
+    display: inline-block;
+    border: 3px solid orangered;
+    padding: 1px 1px 1px 1px;
+    color: whitesmoke;
+}
+    
+    #skills{
+    padding-top: 60px;
+   }
+   #skills .skills-container .skill-box{
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
+
+    margin-bottom: 100px;
+
+    }
+
+    .skill-box .skill-card{
+    padding: 30px;
+    border: 5px solid orangered; 
+    max-width: 100%;
+    box-shadow: 2px 2px 2px rgb(202, 143, 122);
+    border-radius: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
+
+    }
+    footer .footer-container{
+
+    width: 95%;
+    /* max-width: 1140px; */
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    border: 5px solid orangered;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    box-shadow: 10px 10px 10px rgb(202, 143, 122);
+    border-radius: 15px; 
+
+    }
+    
+    footer{
+    padding: 40px 15px;
+    }
+
+  footer .icons{
+    display: flex;
+    /* flex-direction: column;   */
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    }
+
+  .footer-container .icons a{
+    margin-right: 0; 
+    }
+
+
+    #resume .resume-container{
+    width: 95%;
+    margin-top: 60px;
+    /* max-width: 1140px; */
+    /* margin: 18px auto 0; */
+    display: flex;/* education and experience  side by side*/
+    flex-direction: column;
+    gap: 20px;
+    /* border: 2px solid orangered;
+    padding: 10px; */
+
+}
+
+   .resume-card{
+    
+    max-width: 95%;
+    margin-right: 10px;
+    /* margin-right: 47px; */
+    border: 5px solid orangered;
+    padding: 5px;
+    margin-bottom: 20px;
+    box-shadow: 5px 5px 5px  rgb(202, 143, 122);
+
+
+  }
+  nav{
+    width: 95%;
+    /* max-width: 1600px; */
+    /* border: 1px solid red; */
+    /* margin: 0px auto; */
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-between; */
+    /* align-items: center; */
+}
+
+nav{
+    gap: 20px;
+}
+
+nav .menu{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style: none;
+    gap: 30px;
+    /* align-items: center; */
+}
+
+
+
+#banner{
+    /* border: 1px solid red; */
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    text-align: center;
+}
+
+#banner .banner-image img{
+
+    width: 100%;
+    /* vertical-align: middle; */
+
+}
+
+#banner .banner-content p{
+
+}
+
+#banner .banner-content h2{
+    font-size: 45px;
+    font-weight: 600;
+    color: #474747;
+    margin-bottom: 5px;
+    color: whitesmoke;
+    background-color: rgb(202, 143, 122);
+    display: inline-block;
+    padding-left: 5px;
+    padding-right: 5px;
+    border: 3px solid orangered;
+
+}
+/* Sadat */
+#banner .banner-content h1{
+    font-size: 43;
+    font-weight: bold;
+    color: #181818;
+    margin-bottom: 20px;
+    color: whitesmoke;
+    background-color: rgb(202, 143, 122);
+    display: inline-block;
+    padding-left: 5px;
+    padding-right: 5px;
+    border: 3px solid orangered;
+}
+
+.logo h2{
+    visibility: collapse;
+}
+
+.btn-grp{
+
+  justify-content: center;
+ 
+} 
+nav .menu a{
+
+    font-size: 20px;
+    color: #474747;
+    text-decoration: none;
+    background-color: rgb(202, 143, 122);
+    border: 3px solid orangered;
+    padding: 5px;
+    color: white;
+
+}
+
+#banner .banner-content p{
+
+    font-size: 20px;
+    
+}
+}
